--- a/inicial.html
+++ b/inicial.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <h1>Olá, esse é o meu primeiro HTML </h1>
+        <h1>Ola, esse e o meu primeiro HTML </h1>
     </body>
 </html>
