--- a/meujs/meujs.html
+++ b/meujs/meujs.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro JS</title>
+
+    <script>
+        function exibirAlerta(){
+            alert('Meu primeiro alerta');
+        }
+    </script>
+
 </head>
 <body>
 
     <h1>MEU JS</h1>
-    <h2>Teste</h2>
+    <input onclick="javascript:exibirAlerta()" type="button" value="vaai">
+
 </body>
 </html>
